--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.4",
+    "@types/recharts": "^1.8.29",
     "autoprefixer": "^10.4.19",
     "daisyui": "^4.10.4",
     "esbuild": "^0.20.2",
     "postcss": "^8.4.38",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recharts": "^2.12.6",
     "tailwindcss": "^3.4.3"
   },
   "scripts": {
