--- a/config/database.yml
+++ b/config/database.yml
@@ -53,4 +53,4 @@ production:
   database: <%= ENV["MYAPP_DATABASE"] %>
   username: <%= ENV["MYAPP_DATABASE_USERNAME"] %>
   password: <%= ENV["MYAPP_DATABASE_PASSWORD"] %>
-  host: <%= ENV["MYAPP_DATABASE_HOST"] %>
+  url: <%= ENV["DATABASE_URL"] %>
