--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,7 +1,7 @@
 FROM ruby:3.2.3
 ENV LANG C.UTF-8
 ENV TZ Asia/Tokyo
-ENV RAILS_ENV=production
+# ENV RAILS_ENV=production
 
 RUN apt-get update -qq \
   && apt-get install -y ca-certificates curl gnupg \
