--- a/config/database.yml
+++ b/config/database.yml
@@ -50,7 +50,8 @@ test:
 #
 production:
   <<: *default
-  database: <%= ENV["MYAPP_DATABASE"] %>
-  username: <%= ENV["MYAPP_DATABASE_USERNAME"] %>
-  password: <%= ENV["MYAPP_DATABASE_PASSWORD"] %>
+  database: <%= ENV["DATABASE_NAME"] %>
+  username: <%= ENV["DATABASE_USERNAME"] %>
+  password: <%= ENV["DATABASE_PASSWORD"] %>
+  host: <%= ENV["DATABASE_HOST"] %>
   url: <%= ENV["DATABASE_URL"] %>
